# suji

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  build.zig  build.zig.zon  mise.toml  package.json  suji.schema.json  test_fmt  test_json_fmt
.github/workflows/: build-libnode.yml  ci.yml  docs.yml  e2e.yml  release.yml  sdk-publish.yml
assets/entitlements/: helper-gpu.plist  helper-plugin.plist  helper-renderer.plist  helper.plist  main.plist
crates/suji-rs/: Cargo.toml
crates/suji-rs-macros/: Cargo.toml
crates/suji-rs-macros/src/: lib.rs
crates/suji-rs/src/: lib.rs
docs/: CEF_REFACTOR.md  PLAN.md  RELEASING.md  SDK_PORTING.md  WINDOW_API.md  audit-windows-followups.md  electron-parity-audit.md
docs/plans/: 17-B-cef-views-architecture.md
documents/: auto-updater.mdx  backend-go.mdx  backend-node.mdx  backend-rust.mdx  backend-zig.mdx  cache.mdx  clipboard-shell.mdx  crash-reporter.mdx  dialog.mdx  electron-migration.mdx  events.mdx  frontend.mdx  fs.mdx  global-shortcut.mdx  index.mdx  ipc-wire.mdx  menu.mdx  multi-webview.mdx  multi-window.mdx  notification.mdx  plugin-positioner.mdx  plugin-state.mdx  plugin-upload.mdx  plugin-window-state.mdx  plugins.mdx  sandbox.mdx  security.mdx  tray.mdx  window-lifecycle.mdx
examples/android/: README.md  build-lib.sh  settings.gradle
examples/android/app/src/main/cpp/: CMakeLists.txt  suji_jni.c
examples/android/go/cpp/: CMakeLists.txt  backends.c
examples/android/multi/cpp/: CMakeLists.txt  backends.c
examples/android/node/cpp/: CMakeLists.txt  backends.c
examples/android/python/cpp/: CMakeLists.txt  backends.c
examples/android/rust/cpp/: CMakeLists.txt  backends.c
examples/android/zig/cpp/: CMakeLists.txt  backends.c
examples/go-backend/: go.mod  libbackend.dylib  main.go  suji.json  suji.toml
examples/ios/: README.md  build-lib.sh  project.yml
examples/lua-backend/: README.md  suji.json
examples/multi-backend/: .gitignore  suji.json  suji.toml
examples/node-backend/: suji.json
examples/python-backend/: README.md  suji.json
examples/rust-backend/: Cargo.toml  suji.json  suji.toml
examples/window-styles/: README.md  app.zig  build.zig  build.zig.zon  suji.json
examples/zig-backend/: app.zig  build.zig  build.zig.zon  suji.json
include/: suji.h  suji_core.h  suji_mobile_bridge.h
plugins/autostart/: suji-plugin.json
plugins/http/: suji-plugin.json
plugins/log/: suji-plugin.json
plugins/notification-rich/: suji-plugin.json
plugins/os-info/: suji-plugin.json
plugins/positioner/: suji-plugin.json
plugins/sqlite/: suji-plugin.json
plugins/state/: suji-plugin.json
plugins/store/: suji-plugin.json
plugins/terminal/: suji-plugin.json
plugins/upload/: suji-plugin.json
plugins/window-state/: suji-plugin.json
poc/: build.sh
poc-cef/: build.zig  main.zig
poc/go-backend/: main.go
poc/node-backend/: backend.js  package-lock.json  package.json
poc/webview-test/: main.zig
poc/zig-host/: build.zig  build.zig.zon  full_test.zig  main.zig  stress_test.zig
scripts/: homebrew-formula.sh  install.sh  stage-node-android.sh  stage-python-android.sh  stage-python-ios.sh  stage-python.sh  version.sh
sdks/suji-go/: bridge.c  bridge.go  export.go  go.mod  sdk_test.go  suji.go  typescript.go  typescript_test.go
src/: bundle_macos.zig  embed.zig  main.zig  package_desktop.zig  root.zig  runtime.zig  suji.manifest
src/backends/: loader.zig
src/cli/: diagnostics.zig  init.zig  types_cmd.zig  usage.zig
src/core/: app.zig  asset_server.zig  auto_updater.zig  backend_build.zig  backend_lifecycle.zig  badge_count.zig  config.zig  crash_reporter.zig  event_sink.zig  events.zig  init.zig  ipc.zig  logger.zig  packaged_paths.zig  platform.zig  plugin_loader.zig  proc.zig  quit_policy.zig  release_opts.zig  util.zig  webview.zig  window.zig  window_ipc.zig  window_stack.zig
src/platform/: badge_linux.c  badge_win.c  cef.zig  cef_app.zig  cef_app_handler.zig  cef_app_progress.zig  cef_auth_handler.zig  cef_browser_control.zig  cef_browser_ipc.zig  cef_browser_state.zig  cef_c.zig  cef_client_handler.zig  cef_clipboard.zig  cef_clipboard_linux.zig  cef_clipboard_types.zig  cef_clipboard_windows.zig  cef_command_line_policy.zig  cef_core_foundation.zig  cef_crash_reporter.zig  cef_desktop_capturer.zig  cef_devtools.zig  cef_dialog.zig  cef_dialog_linux.zig  cef_dialog_linux_file.zig  cef_dialog_linux_message.zig  cef_dialog_response.zig  cef_dialog_types.zig  cef_dialog_windows_file.zig  cef_dialog_windows_folder.zig  cef_dialog_windows_message.zig  cef_dialog_windows_messagebox.zig  cef_dialog_windows_task_dialog.zig  cef_dock.zig  cef_download_handler.zig  cef_drag_handler.zig  cef_drag_region.zig  cef_global_shortcut.zig  cef_global_shortcut_linux.zig  cef_global_shortcut_linux_parse.zig  cef_global_shortcut_state.zig  (+101 more)
src/templates/: AGENTS.md  CLAUDE.md  gitignore  lua_main.lua  multi_node_main.js  node_package.json  rust_lib.rs  zig_app.zig
tests/: app_test.zig  asset_server_test.zig  cef_drag_region_test.zig  cef_ipc_test.zig  config_test.zig  embed_abi_test.zig  event_sink_test.zig  events_integration_test.zig  events_test.zig  http_plugin_test.zig  init_test.zig  ipc_test.zig  loader_test.zig  log_plugin_test.zig  logger_test.zig  lua_test.zig  node_test.zig  notification_rich_plugin_test.zig  os_autostart_plugin_test.zig  package_desktop_test.zig  positioner_plugin_test.zig  python_test.zig  quit_policy_test.zig  release_opts_test.zig  release_workflow_test.zig  routing_test.zig  sqlite_plugin_test.zig  state_go_wrapper_test.zig  state_plugin_test.zig  state_rust_wrapper_test.zig  store_plugin_test.zig  test_native.zig  upload_plugin_test.zig  watcher_test.zig  window_ipc_test.zig  window_manager_test.zig  window_stack_test.zig  window_state_plugin_test.zig
tests/config-loader/: run.sh
tests/e2e/: _common.sh  _page.ts  auto-updater-quit-install.test.ts  badge-count.test.ts  before-quit.test.ts  capture-page.test.ts  cef-ipc.test.ts  clipboard-text-runtime.test.ts  clipboard.test.ts  context-isolation.test.ts  (+108 more)
website/: README.md  astro.config.mjs  package.json
(+347 files in other folders)
