[package]
name = "suji-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the Suji Rust SDK"
repository = "https://github.com/ohah/suji"
homepage = "https://github.com/ohah/suji"
documentation = "https://github.com/ohah/suji/tree/main/documents/backend-rust.mdx"
keywords = ["suji", "desktop", "ipc", "sdk"]
categories = ["api-bindings", "gui"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
