[package]
name = "suji"
version = "0.1.0"
edition = "2021"
description = "Suji desktop framework - Rust SDK"

[dependencies]
# crates.io 발행 시 path dep 도 version 필수(레지스트리 버전으로 해소).
suji-macros = { path = "../suji-rs-macros", version = "0.1.0" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
specta = { version = "2.0.0-rc.25", features = ["derive"] }
specta-serde = "0.0.12"
specta-typescript = "0.0.12"

[dev-dependencies]
