[package]
name = "suji"
version = "0.1.0"
edition = "2021"
description = "Suji desktop framework - Rust SDK"
repository = "https://github.com/ohah/suji"
homepage = "https://github.com/ohah/suji"
documentation = "https://github.com/ohah/suji/tree/main/documents"
keywords = ["suji", "desktop", "ipc", "sdk"]
categories = ["api-bindings", "gui"]

[dependencies]
# crates.io 발행 시 path dep 도 version 필수(레지스트리 버전으로 해소).
suji-macros = { path = "../suji-rs-macros", version = "0.1.0" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
# specta 2.0.0-rc.25 가 unstable Rust feature `debug_closure_helpers` 를 사용 →
# stable Rust 빌드 불가. `typescript` feature 로 격리해 SDK 핵심(handle/invoke/send)
# 은 stable 에서 빌드, TypeScript 생성 기능은 opt-in (nightly 또는 RUSTC_BOOTSTRAP=1
# + #![feature(debug_closure_helpers)] 패치 필요 — specta-rs 가 stable 호환 안정화
# 머지하면 default 로 복귀).
specta = { version = "2.0.0-rc.25", features = ["derive"], optional = true }
specta-serde = { version = "0.0.12", optional = true }
specta-typescript = { version = "0.0.12", optional = true }

[features]
default = []
typescript = ["dep:specta", "dep:specta-serde", "dep:specta-typescript"]

[dev-dependencies]
